# bevy-rectray-ui

./: .gitignore  Cargo.toml  LICENSE  LICENSE-APACHE  README.md
.github/workflows/: ci.yml
aoui/: Cargo.toml  README.md
aoui/assets/: stroke_circle.wgsl
aoui/examples/: accordion.rs  anchor_offset.rs  aspect.rs  atlas.rs  basic.rs  bisection.rs  build_transform.rs  button.rs  buttons.rs  chain.rs  clipping.rs  container.rs  counter.rs  description.rs  dev_window.rs  draggable.rs  dropdown.rs  dsl.rs  empty.rs  flex.rs  flexspan.rs  fractal.rs  grid.rs  hex.rs  inputbox.rs  integration.rs  integration_lyon.rs  layouts.rs  mouse_events.rs  paragraph.rs  repeat.rs  richtext.rs  schedule_dump.rs  scroll.rs  scroll_discrete.rs  signal.rs  span_layouts.rs  spin.rs  table.rs
aoui/examplesaa/: accordion.rs  scroll.rs  scroll_discrete.rs  signal.rs
aoui/src/: bundles.rs  components.rs  compute.rs  events.rs  extension.rs  hitbox.rs  lib.rs  rect.rs  scaling.rs  scene.rs  schedule.rs
aoui/src/anim/: assoc.rs  fgsm.rs  interpolation.rs  mod.rs  state_machine.rs
aoui/src/core/: bundles.rs  components.rs  compute.rs  dimension.rs  hitbox.rs  mod.rs  pipeline.rs  rect.rs  scaling.rs  systems.rs  transform.rs
aoui/src/dsl/: atlas.rs  clipping.rs  context.rs  convert.rs  converters.rs  core.rs  frame.rs  interpolate.rs  layouts.rs  mesh2d.rs  meta_dsl.rs  mod.rs  oneshot.rs  prelude.rs  rich_text.rs  shapes.rs  util.rs  widgets.rs
aoui/src/events/: coverage.rs  cursor.rs  event.rs  fetch.rs  focus.rs  gbb.rs  handler.rs  mod.rs  mutation.rs  oneshot.rs  state.rs  systems.rs  wheel.rs
aoui/src/flex/: container.rs  grid.rs  layout.rs  mod.rs  span.rs  util.rs
aoui/src/layout/: builders.rs  container.rs  grid.rs  layout.rs  layouts.rs  mod.rs  span.rs  util.rs
aoui/src/signals/: create.rs  dto.rs  globals.rs  mod.rs  mpmc.rs  receiver.rs  sig.rs  signal.rs  signal_pool.rs  storage.rs  systems.rs  types.rs
aoui/src/sparse/: container.rs  layout.rs  mod.rs
aoui/src/sync/: async_param.rs  async_system.rs  mod.rs  signal_inner.rs  signals.rs  special_query.rs  state.rs
aoui/src/util/: children.rs  cloning.rs  commands.rs  compose.rs  condvec.rs  dto.rs  extension.rs  fps.rs  mesh.rs  mod.rs  object.rs  queries.rs  signals.rs  to_bundle.rs  widget.rs
aoui/src/util/convert/: converters.rs  impl_convert.rs  mod.rs
aoui/src/widgets/: atlas.rs  button.rs  clipping.rs  constraints.rs  drag.rs  inputbox.rs  misc.rs  mod.rs  richtext.rs  schedule.rs  scroll.rs  scrollframe.rs  signals.rs  spinbox.rs  spinner.rs  text.rs  util.rs
aoui_rive/: Cargo.toml
aoui_rive/assets/: loader.riv
aoui_rive/src/: lib.rs  main.rs
assets/: ducky.json  stroke_circle.wgsl
book/: book.toml
book/src/: SUMMARY.md  chapter_0.md  chapter_2.md  chapter_3.md  chapter_4.md  chapter_5.md  chapter_6.md  chapter_7.md  chapter_8.md  components.md  concepts.md  dsl.md  layout.md  schedule.md  size.md  structs.md  syntax.md  widgets.md
book/src/diagrams/: aors_core.drawio
defer/: Cargo.toml  README.md
defer/src/: async_param.rs  async_systems.rs  components.rs  executor.rs  lib.rs  object.rs  signal_inner.rs  signals.rs
defer/tests/: signals.rs
derive/: Cargo.toml
derive/example/: dsl.rs
derive/src/: extractors.rs  flex.rs  lib.rs  state.rs
examples/: accordion.rs  bisection.rs  buttons.rs  chain.rs  counter.rs  draggable.rs  dropdown.rs  repeat.rs  richtext.rs  scroll.rs  scroll_discrete.rs  signal.rs  spin.rs
material/: Cargo.toml
material/examples/: mwidget.rs  naive.rs
material/src/: builders.rs  shapes.rs
material/src/shaders/: capsule.wgsl  capsule_shadow.wgsl  rounded_shadow.wgsl
material/src/widgets/: button.rs  toggle.rs
matui/: Cargo.toml
matui/examples/: mwidget.rs  naive.rs  shaders.rs  window.rs
matui/src/: builders.rs  lib.rs  shaders.rs  shapes.rs
matui/src/shaders/: rounded_rectangle.wgsl  rounded_shadow.wgsl
matui/src/style/: mod.rs
matui/src/widgets/: button.rs  chip.rs  dropdown.rs  frame.rs  input.rs  macros.rs  menu.rs  mod.rs  slider.rs  spinner.rs  states.rs  toggle.rs  util.rs
rendering/: Cargo.toml
rendering/src/: glyphcache.rs  lib.rs  material.rs
shapes/: Cargo.toml
shapes/examples/: shapes.rs
shapes/src/: lib.rs  shape.rs  shapes.rs  systems.rs
src/: schedule.rs
src/anim/: assoc.rs  interpolation.rs  mod.rs
src/core/: bundles.rs  components.rs  dimension.rs  hitbox.rs  pipeline.rs  scaling.rs  transform.rs
src/dsl/: atlas.rs  clipping.rs  convert.rs  interpolate.rs  layouts.rs  mesh2d.rs  meta_dsl.rs  prelude.rs  rich_text.rs  util.rs  widgets.rs
src/events/: focus.rs  gbb.rs  state.rs  systems.rs  wheel.rs
src/layout/: grid.rs  layouts.rs  mod.rs
src/util/: commands.rs  compose.rs  fps.rs  queries.rs  to_bundle.rs
src/util/convert/: core_convert.rs  impl_convert.rs  mod.rs  vec_convert.rs
src/widgets/: atlas.rs  button.rs  clipping.rs  constraints.rs  drag.rs  inputbox.rs  misc.rs  scroll.rs  signals.rs  spinner.rs
widgets/: Cargo.toml  README.md
widgets/examples/: button.rs  clipping.rs  dev_window.rs  draggable.rs  inputbox.rs  layouts.rs  richtext.rs  scroll.rs  shapes.rs  signal.rs  table.rs  textbox.rs
widgets/src/: dslsyn.rs  dto.rs  events.rs  input.rs  lib.rs  oneshot.rs  signals.rs
widgets/src/anim/: interpolation.rs  mod.rs
widgets/src/dsl/: context.rs  convert.rs  core.rs  inputbox.rs  layouts.rs  meta_dsl.rs  mod.rs  oneshot.rs  prelude.rs  shapes.rs  util.rs  widgets.rs
widgets/src/events/: cursor.rs  event.rs  mod.rs  oneshot.rs  state.rs  systems.rs  wheel.rs
widgets/src/widgets/: button.rs  drag.rs  inputbox.rs  mod.rs  richtext.rs  schedule.rs  scroll.rs  scrollframe.rs  shape.rs
