[package]
name = "bevy_aoui"
version = "0.2.1"
edition = "2021"

authors = ["Mincong Lu <mintlux667@gmail.com>"]
license = "MIT OR Apache-2.0"

readme = "README.md"
repository = "https://github.com/mintlu8/bevy-aoui"
description = """
A light-weight anchor-offset based 2D sprite layout system for the bevy engine.
"""
keywords = ["bevy", "ui", "widgets"]

[dependencies]
bevy = { version = "^0.12", default-features = false, features = ["bevy_sprite", "bevy_text"] }
itertools = "^0.11"
serde = { version = "^1", optional = true }


[features]
default = ["bundles", "serde"]
## Enable alternative versions of bevy's sprite, spritesheet and text bundles.
bundles = []

[dev-dependencies]
bevy_egui = "^0.23"
rand = "^0.8.5"
bevy = { version = "^0.12" }

