[package]
name = "bevy_aoui"
version = "0.3.0"
edition = "2021"

authors = ["Mincong Lu <mintlux667@gmail.com>"]
license = "MIT OR Apache-2.0"

readme = "README.md"
repository = "https://github.com/mintlu8/bevy-aoui"
description = """
A native rectangular anchor-offset based 2D and UI solution for the bevy engine.
"""
keywords = ["bevy", "2d", "ui", "widgets"]

[lib]
doctest = false

[dependencies]
bevy = { version = "^0.12", default-features = false, features = ["bevy_sprite", "bevy_text", "trace"] }
downcast-rs = "^1.2"
itertools = "^0.12"
serde = { version = "^1", optional = true }
ab_glyph = "^0.2.23"
arboard = { version = "^3.2", default-features = false }
colorthis = { version = "^0.1.1", features=["compact"] }
substring = "^1.4"
tlbf = "^0.3.3"
interpolation = "^0.3"
smallvec = { version = "^1.11", features = ["const_new"] }
parse-color = "^0.1.2"
xi-unicode = "^0.3"
thiserror = "^1"
once_cell = "^1.19"
atomic = "^0.6"
futures = "^0.3.30"
parking_lot = "^0.12"


[features]
default = ["serde"]

[dev-dependencies]
bevy_egui = "^0.24"
rand = "^0.8.5"
bevy = { version = "^0.12", features = ["multi-threaded", "png", "bevy_winit"]}
serde_json = "^1"
serde = "^1"
