[package]
name = "bevy_defer"
version = "0.1.0"
edition = "2021"

authors = ["Mincong Lu <mintlux667@gmail.com>"]
license = "MIT OR Apache-2.0"

readme = "README.md"
repository = "https://github.com/mintlu8/bevy-aoui"
description = """
A simple asynchronous runtime for executing deferred queries.
"""
keywords = ["bevy", "async", "defer"]

[lib]
doctest = false

[dependencies]
bevy = { version = "^0.12", default-features = false, features = ["trace"] }
triomphe = "^0.1.11"
parking_lot = "^0.12"
futures = "^0.3.30"
once_cell = "^1.19"
thiserror = "^1"
downcast-rs = "^1.2"
