[package]
name = "bevy_defer"
version = "0.2.0"
edition = "2021"

authors = ["Mincong Lu <mintlux667@gmail.com>"]
license = "MIT OR Apache-2.0"

readme = "README.md"
repository = "https://github.com/mintlu8/bevy-aoui/tree/main/defer"
description = """
A simple asynchronous runtime for executing deferred queries.
"""
keywords = ["bevy", "async", "defer"]

[lib]
doctest = false

[dependencies]
bevy = { version = "^0.13", default-features = false, features = ["trace"] }
triomphe = "^0.1.11"
parking_lot = "^0.12"
once_cell = "^1.19"
thiserror = "^1"
downcast-rs = "^1.2"
async-oneshot = "0.5.9"
futures-lite = { version = "2.2.0", default-features = false }
noop-waker = "0.1.0"
async-channel = "2.2.0"
