[package]
name = "bevy-aoui-derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroex = "^0.1.5"
macroex-derive = "^0.1.2"
macroex-extras = "^0.2.0"
proc-macro-error = { version = "^1", default-features = false }
proc-macro2 = "^1"
quote = "^1"

[dev-dependencies]
bevy_aoui = { path = "../aoui" }
bevy = { version = "^0.11", default-features = false }
