[package]
name = "bevy_matui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
bevy = { version = "^0.13", default-features = false, features = ["bevy_sprite", "bevy_text", "trace"] }
bevy_rectray = {version = "0.3.0", path = "../aoui"}
bevy_defer = { version = "^0.2", path = "../defer" }
colorthis = { version = "^0.1.1", features = ["compact"] }
parking_lot = "^0.12"

[dev-dependencies]
bevy = { version = "^0.13", features = ["multi-threaded", "png", "bevy_winit"]}
