[package]
name = "bevy_aoui_shapes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

bevy = { version = "^0.12", default-features = false, features = ["bevy_sprite"] }
bevy_aoui = { version = "^0.3", path = "../aoui" }
bevy_prototype_lyon = "^0.10"

[dev-dependencies]
bevy = { version = "^0.12" }
