[package]
name = "bevy_rectray_shapes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

bevy = { version = "^0.13", default-features = false, features = ["bevy_sprite"] }
bevy_rectray = { version = "^0.3", path = "../aoui" }
bevy_prototype_lyon = "^0.11"

[dev-dependencies]
bevy = { version = "^0.13", features = ["multi-threaded", "png", "bevy_winit"]}
