[package]
name = "bevy_aoui_widgets"
version = "0.2.1"
edition = "2021"

authors = ["Mincong Lu <mintlux667@gmail.com>"]
license = "MIT OR Apache-2.0"

readme = "README.md"
repository = "https://github.com/mintlu8/bevy-aoui"
description = """
UI, events and dsl for the bevy_aoui crate.
"""
keywords = ["bevy", "ui", "widgets"]

[dependencies]
ab_glyph = "^0.2.23"
arboard = { version = "^3.2", default-features = false }
bevy = { version = "^0.12", default-features = false, features = ["bevy_sprite", "bevy_text"] }
bevy_aoui = {version = "^0.2", path = "../aoui"}
bevy_prototype_lyon = "^0.10.0"
colorthis = {version = "^0.1.1", features=["compact"]}
serde = "^1"
postcard = {version = "^1", default-features = false, features = ["use-std"]}
string_iter = "^0.1"
tlbf = "^0.2"
interpolation = "^0.3"
smallvec = { version = "^1.11", features = ["const_new"] }
generic_static = "^0.2"
parse-color = "^0.1.2"
xi-unicode = "^0.3"
thiserror = "^1"

[dev-dependencies]
bevy = "^0.12"


